# dealscout

./: README.md  app.py  main.py  pyproject.toml
.github/workflows/: sync-to-hf.yml
app/: dealscout_app.py
notebooks/phase1_data_modeling/: 01_data_curation.ipynb  02_data_preprocessing.ipynb  03_evaluation_traditional_ml.ipynb  04_deep_learning_and_llms.ipynb  05_finetune_frontier_model.ipynb
notebooks/phase2_finetuning/: 06_qlora.ipynb  07_prompt_data_base_model.ipynb  08_training.ipynb  09_evaluation.ipynb
notebooks/phase3_agents/: 10_modal_specialist_agent.ipynb  11_rag_frontier_ensemble.ipynb  12_scanner_messaging_agents.ipynb  13_autonomous_planner.ipynb  14_test_Run.ipynb  memory.json
scripts/: build_vectorstore.py
src/dealscout/: config.py
src/dealscout/agents/: autonomous_planning_agent.py  ensemble_agent.py  frontier_agent.py  messaging_agent.py  neural_network_agent.py  planning_agent.py  scanner_agent.py  specialist_agent.py
src/dealscout/core/: __init__.py  items.py  loaders.py  parser.py
src/dealscout/demo/: demo_engine.py  sample_deals.py
src/dealscout/deployment/: __init__.py  dealscout_service.py
src/dealscout/framework/: deal_agent_framework.py
src/dealscout/models/: batch.py
