[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealscout"
version = "0.1.0"
description = "An agentic AI system that estimates product prices and autonomously hunts for online bargains."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DealScout Contributors" }]
keywords = ["llm", "agents", "rag", "fine-tuning", "pricing", "modal", "gradio"]

dependencies = [
    "anthropic>=0.69.0",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.0",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-genai>=1.41.0",
    "gradio>=5.47.2,<6.0",
    "groq>=0.33.0",
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "litellm>=1.77.5",
    "matplotlib>=3.10.6",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "xgboost>=3.1.1",
    "nbformat>=4.2.0",
    "peft>=0.19.1",
    "bitsandbytes>=0.49.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
dealscout = "dealscout.framework.deal_agent_framework:main"

[project.urls]
Homepage = "https://github.com/your-username/dealscout"
Repository = "https://github.com/your-username/dealscout"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]